name:                alchemy
version:             0.1.0.0
synopsis:            ALCHEMY: A Language and Compiler for Homomorphic Encryption Made easY
homepage:            https://github.com/cpeikert/Lol
license:             GPL-2
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md
cabal-version:       >=1.10
description:
        TODO

source-repository head
  type:     git
  location: https://github.com/cpeikert/Lol

library
  default-language:    Haskell2010

  exposed-modules: Crypto.Alchemy.Interpreter.Depth
                   Crypto.Alchemy.Interpreter.Dup
                   Crypto.Alchemy.Interpreter.ErrorRateWriter
                   Crypto.Alchemy.Interpreter.Eval
                   Crypto.Alchemy.Interpreter.KeysHints
                   Crypto.Alchemy.Interpreter.PT2CT
                   Crypto.Alchemy.Interpreter.PT2CT.Noise
                   Crypto.Alchemy.Interpreter.Print
                   Crypto.Alchemy.Interpreter.RescaleTree
                   Crypto.Alchemy.Interpreter.Size
                   Crypto.Alchemy.Language.Arithmetic
                   Crypto.Alchemy.Language.Lambda
                   Crypto.Alchemy.Language.List
                   Crypto.Alchemy.Language.Monad
                   Crypto.Alchemy.Language.SHE
                   Crypto.Alchemy.Language.TunnelCyc
                   Crypto.Alchemy.MonadAccumulator

  build-depends: base >= 4.7 && < 5
               , lol >= 0.5
               , lol-apps >= 0.1
               , MonadRandom
               , mtl
               , numeric-prelude
               , singletons
               , tagged-transformer
               , template-haskell
               , type-natural

executable alchemy-arithmetic
  hs-source-dirs: examples
  default-language: Haskell2010
  main-is: Arithmetic.hs
  ghc-options: -main-is Arithmetic

  ghc-options: -rtsopts

  build-depends:
    alchemy,
    base >= 4.9 && < 4.10,
    lol,
    lol-cpp,
    mtl,
    type-natural

executable alchemy-homomrlwr
  hs-source-dirs: examples
  default-language: Haskell2010
  main-is: HomomRLWR.hs
  ghc-options: -main-is HomomRLWR
  buildable: False
  ghc-options: -rtsopts

  build-depends:
    alchemy,
    base >= 4.9 && < 4.10,
    lol,
    lol-cpp,
    mtl,
    numeric-prelude,
    singletons,
    type-natural

executable alchemy-tunnel
  hs-source-dirs:   examples
  default-language: Haskell2010
  main-is:          Tunnel.hs
  ghc-options: -main-is Tunnel

  ghc-options: -rtsopts

  build-depends:
    alchemy,
    base >= 4.9 && < 4.10,
    lol,
    lol-cpp,
    mtl,
    numeric-prelude,
    type-natural