name:                lol-challenges
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            LWE challenges using Lol.
homepage:            https://github.com/cpeikert/Lol
Bug-Reports:         https://github.com/cpeikert/Lol/issues
license:             GPL-2
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md
cabal-version:       >= 1.10
description:         TODO.

source-repository head
  type: git
  location: https://github.com/cpeikert/Lol

executable lol-challenges
  default-language:   Haskell2010
  hs-source-dirs:     ./,utils
  main-is: Main.hs

  ghc-options: -threaded -rtsopts -O3 -auto-all -caf-all

  build-depends:
    base,
    boolean-list,
    bytestring,
    cereal,
    containers,
    crypto-api,
    deepseq,
    directory,
    DRBG,
    ghc-prim,
    lol,
    lol-apps,
    MonadRandom,
    mtl,
    nist-beacon,
    numbers,
    numeric-prelude,
    protocol-buffers,
    random,
    repa,
    singletons,
    storable-tuple,
    tagged-transformer,
    time,
    vector