name:                fhe-compiler
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            A compiler for FHE.
homepage:            https://github.com/cpeikert/Lol
Bug-Reports:         https://github.com/cpeikert/Lol/issues
license:             GPL-2
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
-- extra-source-files:  README, CHANGES.md
cabal-version:       >= 1.10
description:
    The FHE compiler simplifies writing homomorphic computations. It is built on
    <https://hackage.haskell.org/package/lol Λ ○ λ> and currently works
    with SymmSHE from the <https://hackage.haskell.org/package/lol-apps lol-apps>
    package.
source-repository head
  type: git
  location: https://github.com/cpeikert/Lol

library
  default-language:   Haskell2010

  ghc-options: -O3

  exposed-modules:
    Crypto.Lol.Compiler.AST
    Crypto.Lol.Compiler.CT
    Crypto.Lol.Compiler.CTCompiler
    Crypto.Lol.Compiler.CTDummy

  build-depends:
    base==4.9.*,
    constraints,
    containers,
    crypto-api,
    deepseq,
    lol,
    lol-apps,
    MonadRandom,
    mtl,
    numeric-prelude,
    syntactic,
    template-haskell

executable compiledhomomprf
  default-language:   Haskell2010
  main-is: Main.hs

  ghc-options: -threaded -rtsopts

  build-depends:
    arithmoi,
    base,
    binary,
    bytestring,
    fhe-compiler,
    constraints,
    crypto-api,
    DRBG,
    deepseq,
    lol,
    lol-apps,
    MonadRandom,
    mtl,
    numeric-prelude,
    random,
    singletons,
    time,
    type-natural,
    QuickCheck,
    containers,
    syntactic
