name:                lol-apps
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.1.0
synopsis:            Lattice-based cryptographic applications using <https://hackage.haskell.org/package/lol lol>.
homepage:            https://github.com/cpeikert/Lol
Bug-Reports:         https://github.com/cpeikert/Lol/issues
license:             GPL-3
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md, SHE.proto
cabal-version:       >= 1.10
description:
    This library contains example cryptographic applications built using
    <https://hackage.haskell.org/package/lol Lol>,
    a general-purpose library for ring-based lattice cryptography.

source-repository head
  type: git
  location: https://github.com/cpeikert/Lol

Flag llvm
  Description:  Compile via LLVM. This produces much better object code,
                but you need to have the LLVM compiler installed.

  Default:      False

Flag opt
  Description: Turn on library optimizations
  Default:     True
  Manual:      False

library
  default-language:   Haskell2010

  if flag(llvm)
    ghc-options: -fllvm -optlo-O3 -pgmlo opt

  exposed-modules:
    Crypto.Lol.Applications.KeyHomomorphicPRF
    Crypto.Lol.Applications.SymmSHE

    Crypto.Proto.SHE
    Crypto.Proto.SHE.KSHint
    Crypto.Proto.SHE.RqPolynomial
    Crypto.Proto.SHE.SecretKey
    Crypto.Proto.SHE.TunnelHint

    Crypto.Lol.Applications.Tests
    Crypto.Lol.Applications.Benchmarks
    Crypto.Lol.Applications.Examples

  other-modules:
    Crypto.Lol.Applications.Tests.SHETests
    Crypto.Lol.Applications.Tests.Default
    Crypto.Lol.Applications.Benchmarks.KHPRFBenches
    Crypto.Lol.Applications.Benchmarks.SHEBenches
    Crypto.Lol.Applications.Benchmarks.Default
    Crypto.Lol.Applications.Examples.KHPRF
    Crypto.Lol.Applications.Examples.SymmSHE

  build-depends:
    DRBG,
    MonadRandom,
    base,
    containers,
    crypto-api,
    deepseq,
    filepath,
    lol >= 0.7.0.0 && < 0.8,
    mtl,
    numeric-prelude,
    options,
    protocol-buffers,
    protocol-buffers-descriptor,
    singletons,
    split,
    test-framework,
    time,
    QuickCheck
