name:                 lol-bench
version:              0.3.0.0
synopsis:             Benchmark suite for the Λ ○ λ (Lol) cryptography library
-- description:
homepage:             https://github.com/cpeikert/Lol
license:              GPL-2
license-file:         LICENSE
author:               Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:           Eric Crockett <ecrockett0@gmail.com>
-- copyright:
category:             Crypto
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

Flag llvm
  Default:      False
  Description:  Compile via LLVM

Flag opt
  Description:  Turn on library optimizations
  Default:      True

flag c
  default:      True
  description:  Enable the C backend

flag repa
  default:      True
  description:  Enable the Repa backend

flag accelerate
  default:      False
  description:  Enable Accelerate backend


executable lol-bench
  default-language:    Haskell2010
  hs-source-dirs:      src, utils
  main-is:             Main.hs
  other-modules:
    -- utils
    Apply
    Gen
    Harness.Cyc
    Utils

    -- benchmarks
    Benchmarks
    CycBenches
    ZqBenches

  build-depends:
      base                == 4.8.*
    , lol                 == 0.3.*
    --
    , criterion           == 1.1.*
    , deepseq             >= 1.4.1.1 && < 1.5
    , DRBG                >= 0.5
    , MonadRandom         >= 0.2     && < 0.5
    , mtl                 >= 2.2.1   && < 2.3
    , repa                == 3.4.*
    , singletons          >= 1.1.2.1 && < 2.1
    , transformers        >= 0.4.2.0 && < 0.5
    , vector              == 0.11.*

  ghc-options: -Wall -threaded -rtsopts

  if flag(opt)
    ghc-options: -O3 -Odph -funbox-strict-fields -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000

  if flag(llvm)
    ghc-options: -fllvm -optlo-O3

  if flag(c)
    cpp-options: -DC_TENSOR_ENABLE

  if flag(repa)
    cpp-options: -DREPA_TENSOR_ENABLE

  if flag(accelerate)
    cpp-options: -DACCELERATE_TENSOR_ENABLE
    build-depends:
      lol-accelerate             == 0.1.*

-- vim: nospell

